fixed height on body,html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
 <section class="section1" class="container-fluid" id="section01">
-    <div class="container">
+    <div class="container-full">
       <div class="starter-template">
         <img src="css/hs.jpg" alt="self" style="width:160px;height:160px;">
         <h1> Jorge Cano <br>{ Full-Stack Web Developer }</h1>
