pdf webicon, fixed html content errors

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="starter-template">
         <img src="css/hs.jpg" alt="self" style="width:160px;height:160px;">
         <h1> Jorge Cano <br>{ Full-Stack Web Developer }</h1>
-        <p class="lead">Object Oriented Programmer built on DRY principles <br>& Coding with Purpose..and almost always for the fun</p>
+        <p class="lead">Object Oriented Programmer built on DRY principles <br>& Coding with Purpose..and almost always for fun</p>
       </div>
 
 
@@ -68,7 +68,7 @@
           <p class="lead">
             Born & Raised in Southern Texas. <br />
             Wake Surfing, Skateboarding is a past time of mine. <br />
-            Music is a main hobby, oscillators and drum machines<br /> are at the top of my amusement.<br />
+            Music is a main hobby, oscillators and drum machines<br /> are at the top of the list for my amusement.<br />
           </p>
 
           <div class="row">
@@ -113,7 +113,7 @@
   <a name="projects"></a>
     <div id="projects" class="container-fluid">
         <h1>Projects</h1>
-        <p class="lead">Express, React, Node.js and Other projects</p>
+        <p class="lead">Express, React, Node.js and Other Projects</p>
         <div class="card"><a href="https://jorge-cano.github.io/react-stopwatch/">Stop Watch</a></div>
         <div class="card"><a href="https://github.com/Jorge-Cano/weatherapp-customization">Weather Bug</div>
         <div class="card"><a href="https://jorge-cano.github.io/web_audiosynth/">Web Audio</a></div>
@@ -139,6 +139,8 @@
                 <a href="https://www.linkedin.com/in/jorgeacano/"><img src="css/Assets/link.png" alt="linkedin" style="width:45px;height:45px;"></a><br />
                 <a href="https://www.facebook.com/george.oengine"><img src="css/Assets/fb.png" alt="facebook" style="width:45px;height:45px;"></a><br />
                 <a href="https://medium.com/@jacinaustin"><img src="css/Assets/med.png" alt="medium" style="width:45px;height:45px;"></a><br />
+                <a href="https://docs.google.com/document/d/1m3VHPZptoDpmJQ1xr2JmV5zAgaa94vV1XUA9Nm8wTS0/"><img src="css/Assets/resume.png" alt="blog" style="width:45px;height:45px;"></a><br />
+
               </div>
             </div>
         </div>
