--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
 <section class="about" class="container-fluid" id=section02>
       <a name="about"></a>
         <div id="about" class="container-fluid">
-          <h1>About me in a few lines..</h1>
+          <h1><span>About me in a few lines..</span></h1>
           <p class="lead">
-            Born & Raised in Southern Texas. <br />
+            <span>Born & Raised in Southern Texas. <br />
             Wake Surfing, Skateboarding is a past time of mine. <br />
             Music is a main hobby, oscillators and drum machines<br /> are at the top of the list for my amusement.<br />
+          </span>
           </p>
 
           <div class="row">
@@ -119,7 +120,12 @@
         <div class="card"><a href="https://jorge-cano.github.io/web_audiosynth/">Web Audio</a></div>
         <div class="card"><a href="https://github.com/Jorge-Cano/Quote-Machine-React">Quote App</a></div>
     </div>
-
+    <div class="project-img">
+      <img src="css/Assets/sw.png" alt="stopwatch" style="width:230px;height:200px;">
+      <img src="css/Assets/quote.png" alt="quote" style="width:230px;height:200px;">
+      <img src="css/Assets/keyboard.png" alt="keys" style="width:230px;height:200px;">
+      <img src="css/Assets/thumper.png" alt="thumps" style="width:230px;height:200px;">
+    </div>
 
       <a href="#section04"><span></span><div class="arrow-down"></div></a>
 
