--- a/index.html
+++ b/index.html
@@ -139,14 +139,21 @@
           <p class="lead">~ I'm available through ~<br /> multiple channels</p>
             <div id="hot">
               <div class="lead">
-                <a href="tel:1-512-831-2857"><img src="css/Assets/phone.png" alt="phone" style="width:45px;height:45px;"></a> <br />
-                <a href="mailto:jacinaustin@gmail.com"><img src="css/Assets/mail.jpg" alt="gmail" style="width:45px;height:45px;"></a><br />
-                <a href="https://Github.com/Jorge-Cano"><img src="css/Assets/gh.png" alt="github" style="width:45px;height:45px;"></a><br />
-                <a href="https://www.linkedin.com/in/jorgeacano/"><img src="css/Assets/link.png" alt="linkedin" style="width:45px;height:45px;"></a><br />
-                <a href="https://www.facebook.com/george.oengine"><img src="css/Assets/fb.png" alt="facebook" style="width:45px;height:45px;"></a><br />
-                <a href="https://medium.com/@jacinaustin"><img src="css/Assets/med.png" alt="medium" style="width:45px;height:45px;"></a><br />
-                <a href="https://docs.google.com/document/d/1m3VHPZptoDpmJQ1xr2JmV5zAgaa94vV1XUA9Nm8wTS0/"><img src="css/Assets/resume.png" alt="blog" style="width:45px;height:45px;"></a><br />
 
+                <div class="row">
+                  <div class="col-md-6 col-xs-6">
+                    <a href="tel:1-512-831-2857"><img src="css/Assets/phone.png" alt="phone" style="width:75px;height:75px;"></a> <br />
+                    <a href="mailto:jacinaustin@gmail.com"><img src="css/Assets/mail.jpg" alt="gmail" style="width:75px;height:75px;"></a><br />
+                    <a href="https://Github.com/Jorge-Cano"><img src="css/Assets/gh.png" alt="github" style="width:75px;height:75px;"></a><br />
+                  </div>
+                  <div class="col-md-6 col-xs-6">
+                    <a href="https://www.linkedin.com/in/jorgeacano/"><img src="css/Assets/link.png" alt="linkedin" style="width:75px;height:75px;"></a><br />
+                    <a href="https://medium.com/@jacinaustin"><img src="css/Assets/med.png" alt="medium" style="width:75px;height:75px;"></a><br />
+                    <a href="https://docs.google.com/document/d/1m3VHPZptoDpmJQ1xr2JmV5zAgaa94vV1XUA9Nm8wTS0/"><img src="css/Assets/resume.png" alt="blog" style="width:75px;height:75px;"><p>Resume.pdf</p></a><br />
+                  </div>
+
+
+                </div>
               </div>
             </div>
         </div>
