--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             <div class="col-md-6 col-xs-6"><h1>Things I love</h1> <br/ >
               <p>Thai Food</p><br/ >
               <p>Aha Moments</p><br/ >
-              <p>Parrallax Scrolling</p><br/ >
+              <p style="color:#ff4c4c">Parrallax Scrolling</p><br/ >
               <p>...when scissors hit wrapping paper and just glide</p><br />
             </div>
             <div class="col-md-6 col-xs-6"><h1>Things I hate</h1> <br />
-              <p>Unfinished lessons</p><br/ >
+              <p style="color:#ff4c4c">Unfinished lessons</p><br/ >
               <p>Not Deploying Projects ^</p><br />
               <p>Not Winning People Over</p><br />
               <p>...giving up when I'm so close to a solution</p><br />
@@ -92,10 +92,10 @@
               <p>Japan</p><br/ >
               <p>Write a Book</p><br />
               <p>Take on Mentorship</p><br />
-              <p>...take a prize in a Hackathon</p><br />
+              <p style="color:#ff4c4c">...take a prize in a Hackathon</p><br />
             </div>
             <div class="col-md-6 col-xs-6"><h1>Habbit.Drop</h1> <br />
-              <p>Syntax Errors</p><br />
+              <p style="color:#ff4c4c">Syntax Errors</p><br />
               <p>Speaking Softly</p><br />
               <p>Leaving my Bicycle at Randoms Spots</p><br/ >
               <p>...small talk, on to more meaningful conversations</p><br/ >
