added new tabs on hyper links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col-md-6 col-xs-6"><h1>Things I love</h1> <br/ >
               <p>Thai Food</p><br/ >
               <p>Aha Moments</p><br/ >
-              <p style="color:#ff4c4c">Parrallax Scrolling</p><br/ >
+              <p><a href="https://jorge-cano.github.io/parallax/" target="_blank" style="color:#ff4c4c">Parallax Scrolling</a></p><br/ >
               <p>...when scissors hit wrapping paper and just glide</p><br />
             </div>
             <div class="col-md-6 col-xs-6"><h1>Things I hate</h1> <br />
@@ -115,10 +115,10 @@
     <div id="projects" class="container-fluid">
         <h1>Projects</h1>
         <p class="lead">Express, React, Node.js and Other Projects</p>
-        <div class="card"><a href="https://jorge-cano.github.io/react-stopwatch/">Stop Watch</a></div>
-        <div class="card"><a href="https://github.com/Jorge-Cano/weatherapp-customization">Weather Bug</div>
-        <div class="card"><a href="https://jorge-cano.github.io/web_audiosynth/">Web Audio</a></div>
-        <div class="card"><a href="https://github.com/Jorge-Cano/Quote-Machine-React">Quote App</a></div>
+        <div class="card"><a href="https://jorge-cano.github.io/react-stopwatch/" target="_blank">Stop Watch</a></div>
+        <div class="card"><a href="https://github.com/Jorge-Cano/weatherapp-customization" target="_blank">Weather Bug</div>
+        <div class="card"><a href="https://jorge-cano.github.io/web_audiosynth/" target="_blank">Web Audio</a></div>
+        <div class="card"><a href="https://github.com/Jorge-Cano/Quote-Machine-React" target="_blank">Quote App</a></div>
     </div>
     <div class="project-img">
       <img src="css/Assets/sw.png" alt="stopwatch" style="width:230px;height:200px;">
