--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="card"><a href="https://jorge-cano.github.io/react-stopwatch/" target="_blank">Stop Watch</a></div>
         <div class="card"><a href="https://github.com/Jorge-Cano/weatherapp-customization" target="_blank">Weather Bug</div>
         <div class="card"><a href="https://jorge-cano.github.io/web_audiosynth/" target="_blank">Web Audio</a></div>
-        <div class="card"><a href="https://github.com/Jorge-Cano/Quote-Machine-React" target="_blank">Quote App</a></div>
+        <div class="card"><a href="https://github.com/Jorge-Cano/Quote-Machine-React" target="_blank">Thumper App</a></div>
     </div>
     <div class="project-img">
       <img src="css/Assets/sw.png" alt="stopwatch" style="width:230px;height:200px;">
