weather bug pic

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
     <div class="project-img">
       <img src="css/Assets/sw.png" alt="stopwatch" style="width:230px;height:200px;">
-      <img src="css/Assets/quote.png" alt="quote" style="width:230px;height:200px;">
+      <img src="css/Assets/WB.png" alt="WeatherBug" style="width:230px;height:200px;">
       <img src="css/Assets/keyboard.png" alt="keys" style="width:230px;height:200px;">
       <img src="css/Assets/thumper.png" alt="thumps" style="width:230px;height:200px;">
     </div>
