--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                 <div class="row">
                   <div class="col-md-6 col-xs-6">
-                    <a href="tel:1-512-831-2857"><img src="css/Assets/phone.png" alt="phone" style="width:75px;height:75px;"></a> <br />
+                    <a href="tel:"><img src="css/Assets/phone.png" alt="phone" style="width:75px;height:75px;"></a> <br />
                     <a href="mailto:jacinaustin@gmail.com"><img src="css/Assets/mail.jpg" alt="gmail" style="width:75px;height:75px;"></a><br />
                     <a href="https://Github.com/Jorge-Cano"><img src="css/Assets/gh.png" alt="github" style="width:75px;height:75px;"></a><br />
                   </div>
